<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sparkii</string>
    <string name="action_network">Network</string>
    <string name="action_settings">Settings</string>
    <string name="action_myprofile">My Profile</string>
    <string name="action_viewprofile">View Profile</string>
    <string name="action_contact">Contacts</string>
    <string name="action_quit">Quit</string>
    <string name="action_about">About</string>
    <string name="title_activity_conversation">Conversation</string>
    <string name="title_activity_settings">Settings</string>
    <string name="empty"></string>
    <string name="send">Send</string>
    <string name="nickname">NickName</string>
    <string name="email">Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="sendfile">Send File</string>
    <string name="profile">Profile</string>
    <string name="history">History</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="chat">Chat</string>
    <string name="title_activity_network">NetworkActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="newuser">New User?</string>
    <string name="signup">Signup</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="keyword">Please input keyword</string>
    <string name="search">Search</string>
    <string name="add">Add to contacts</string>
    <string name="delete">Remove from contacts</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="repassword">Confirm Password</string>
    <string name="searchinfo">No friends yet? Click menu->Contacts to find your friends!</string>
    <string name="settinginfo">Will be public to the others! Can be different from your account email!</string>
    <string name="title_activity_test">Test</string>

</resources>