<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff6699cc"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="horizontal"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity" >

 	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" 
	    android:padding="40dp"
	    android:background="#ffffffff" 
	    android:orientation="horizontal"
	    android:gravity="center">

 		<TextView
 		    android:id="@+id/tvAccount"
 		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content"
 		    android:layout_alignParentLeft="true"
 		    android:layout_alignParentTop="true"
 		    android:layout_marginBottom="5dp"
 		    android:text="@string/email" />

 	    <EditText
 		    android:id="@+id/etAccount"
 		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content"
 		    android:layout_alignParentLeft="true"
 		    android:layout_below="@+id/tvAccount"
 		    android:layout_marginBottom="20dp"
 		    android:inputType="textEmailAddress" />

 		<TextView
 		    android:id="@+id/tvPassword"
 		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content"
 		    android:layout_alignParentLeft="true"
 		    android:layout_below="@+id/etAccount"
 		    android:layout_marginBottom="5dp"
 		    android:text="@string/password" />

 	    <EditText
 		    android:id="@+id/etPassword"
 		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content"
 		    android:layout_below="@+id/tvPassword"
 		    android:layout_marginBottom="20dp"
 		    android:inputType="textPassword" />

 		<TextView
 		    android:id="@+id/tvNewUser"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:layout_below="@+id/etPassword"
 		    android:layout_marginBottom="40dp"
 		    android:layout_marginRight="20dp"
 		    android:text="@string/newuser" />
 		
 	    <TextView
 		    android:id="@+id/tvSignup"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:layout_toRightOf="@+id/tvNewUser"
 		    android:layout_alignTop="@+id/tvNewUser"
 		    android:text="@string/signup" 
 		    android:textColor="#ff336699" 
 		    android:onClick="onSignup" 
 		    android:clickable="true" />

 		<Button
 		    android:id="@+id/btnLogin"
 		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content"
 		    android:layout_below="@+id/tvNewUser"
 		    android:background="#ff6699cc"
 		    android:text="@string/login" 
 		    android:textSize="24sp" 
 		    android:textColor="#ffffffff" 
 		    android:onClick="onLogin"/>

 	</RelativeLayout>
</LinearLayout>